@@ -365,6 +365,87 @@ operator|=
 name|hyphenator
 expr_stmt|;
 block|}
+comment|/**    * Create a HyphenationCompoundWordTokenFilter with no dictionary.    *<p>    * Calls {@link #HyphenationCompoundWordTokenFilter(Version, TokenStream, HyphenationTree, Set, int, int, int, boolean)    * HyphenationCompoundWordTokenFilter(matchVersion, input, hyphenator,    * null, minWordSize, minSubwordSize, maxSubwordSize }    */
+DECL|method|HyphenationCompoundWordTokenFilter
+specifier|public
+name|HyphenationCompoundWordTokenFilter
+parameter_list|(
+name|Version
+name|matchVersion
+parameter_list|,
+name|TokenStream
+name|input
+parameter_list|,
+name|HyphenationTree
+name|hyphenator
+parameter_list|,
+name|int
+name|minWordSize
+parameter_list|,
+name|int
+name|minSubwordSize
+parameter_list|,
+name|int
+name|maxSubwordSize
+parameter_list|)
+block|{
+name|this
+argument_list|(
+name|matchVersion
+argument_list|,
+name|input
+argument_list|,
+name|hyphenator
+argument_list|,
+operator|(
+name|Set
+argument_list|<
+name|?
+argument_list|>
+operator|)
+literal|null
+argument_list|,
+name|minWordSize
+argument_list|,
+name|minSubwordSize
+argument_list|,
+name|maxSubwordSize
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Create a HyphenationCompoundWordTokenFilter with no dictionary.    *<p>    * Calls {@link #HyphenationCompoundWordTokenFilter(Version, TokenStream, HyphenationTree, int, int, int)     * HyphenationCompoundWordTokenFilter(matchVersion, input, hyphenator,     * DEFAULT_MIN_WORD_SIZE, DEFAULT_MIN_SUBWORD_SIZE, DEFAULT_MAX_SUBWORD_SIZE }    */
+DECL|method|HyphenationCompoundWordTokenFilter
+specifier|public
+name|HyphenationCompoundWordTokenFilter
+parameter_list|(
+name|Version
+name|matchVersion
+parameter_list|,
+name|TokenStream
+name|input
+parameter_list|,
+name|HyphenationTree
+name|hyphenator
+parameter_list|)
+block|{
+name|this
+argument_list|(
+name|matchVersion
+argument_list|,
+name|input
+argument_list|,
+name|hyphenator
+argument_list|,
+name|DEFAULT_MIN_WORD_SIZE
+argument_list|,
+name|DEFAULT_MIN_SUBWORD_SIZE
+argument_list|,
+name|DEFAULT_MAX_SUBWORD_SIZE
+argument_list|)
+expr_stmt|;
+block|}
 comment|/**    * Creates a new {@link HyphenationCompoundWordTokenFilter} instance.    *     * @param input the {@link TokenStream} to process    * @param hyphenator the hyphenation pattern tree to use for hyphenation    * @param dictionary the word dictionary to match against    * @param minWordSize only words longer than this get processed    * @param minSubwordSize only subwords longer than this get to the output    *        stream    * @param maxSubwordSize only subwords shorter than this get to the output    *        stream    * @param onlyLongestMatch Add only the longest matching subword to the stream    * @deprecated use {@link #HyphenationCompoundWordTokenFilter(Version, TokenStream, HyphenationTree, String[], int, int, int, boolean)} instead.     */
 annotation|@
 name|Deprecated
@@ -816,6 +897,10 @@ block|}
 comment|// check the dictionary
 if|if
 condition|(
+name|dictionary
+operator|==
+literal|null
+operator|||
 name|dictionary
 operator|.
 name|contains
