@@ -377,6 +377,202 @@ block|}
 argument_list|)
 expr_stmt|;
 block|}
+comment|/**    * With hyphenation-only, you can get a lot of nonsense tokens.    * This can be controlled with the min/max subword size.    */
+DECL|method|testHyphenationOnly
+specifier|public
+name|void
+name|testHyphenationOnly
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Reader
+name|reader
+init|=
+name|getHyphenationReader
+argument_list|()
+decl_stmt|;
+name|HyphenationTree
+name|hyphenator
+init|=
+name|HyphenationCompoundWordTokenFilter
+operator|.
+name|getHyphenationTree
+argument_list|(
+name|reader
+argument_list|)
+decl_stmt|;
+name|HyphenationCompoundWordTokenFilter
+name|tf
+init|=
+operator|new
+name|HyphenationCompoundWordTokenFilter
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|WhitespaceTokenizer
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|StringReader
+argument_list|(
+literal|"basketballkurv"
+argument_list|)
+argument_list|)
+argument_list|,
+name|hyphenator
+argument_list|,
+name|CompoundWordTokenFilterBase
+operator|.
+name|DEFAULT_MIN_WORD_SIZE
+argument_list|,
+literal|2
+argument_list|,
+literal|4
+argument_list|)
+decl_stmt|;
+comment|// min=2, max=4
+name|assertTokenStreamContents
+argument_list|(
+name|tf
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"basketballkurv"
+block|,
+literal|"ba"
+block|,
+literal|"sket"
+block|,
+literal|"bal"
+block|,
+literal|"ball"
+block|,
+literal|"kurv"
+block|}
+argument_list|)
+expr_stmt|;
+name|tf
+operator|=
+operator|new
+name|HyphenationCompoundWordTokenFilter
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|WhitespaceTokenizer
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|StringReader
+argument_list|(
+literal|"basketballkurv"
+argument_list|)
+argument_list|)
+argument_list|,
+name|hyphenator
+argument_list|,
+name|CompoundWordTokenFilterBase
+operator|.
+name|DEFAULT_MIN_WORD_SIZE
+argument_list|,
+literal|4
+argument_list|,
+literal|6
+argument_list|)
+expr_stmt|;
+comment|// min=4, max=6
+name|assertTokenStreamContents
+argument_list|(
+name|tf
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"basketballkurv"
+block|,
+literal|"basket"
+block|,
+literal|"sket"
+block|,
+literal|"ball"
+block|,
+literal|"lkurv"
+block|,
+literal|"kurv"
+block|}
+argument_list|)
+expr_stmt|;
+name|tf
+operator|=
+operator|new
+name|HyphenationCompoundWordTokenFilter
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|WhitespaceTokenizer
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|StringReader
+argument_list|(
+literal|"basketballkurv"
+argument_list|)
+argument_list|)
+argument_list|,
+name|hyphenator
+argument_list|,
+name|CompoundWordTokenFilterBase
+operator|.
+name|DEFAULT_MIN_WORD_SIZE
+argument_list|,
+literal|4
+argument_list|,
+literal|10
+argument_list|)
+expr_stmt|;
+comment|// min=4, max=10
+name|assertTokenStreamContents
+argument_list|(
+name|tf
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"basketballkurv"
+block|,
+literal|"basket"
+block|,
+literal|"basketbal"
+block|,
+literal|"basketball"
+block|,
+literal|"sket"
+block|,
+literal|"sketbal"
+block|,
+literal|"sketball"
+block|,
+literal|"ball"
+block|,
+literal|"ballkurv"
+block|,
+literal|"lkurv"
+block|,
+literal|"kurv"
+block|}
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|testDumbCompoundWordsSE
 specifier|public
 name|void
